--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/sakai-ng",
+                        "outputPath": "dist/portfolio",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": [
@@ -101,5 +101,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": false
     }
 }
